Build pipeline indexes lock-free, adopt at finish
Every loader and PipelineRendererContext build path that constructed a
ConcurrentList / ConcurrentMap by sequential .add / .put now builds into a
raw ArrayList / HashMap / LinkedHashMap (lock-free), then promotes to the
concurrent variant via Concurrent.adoptList / adoptMap / adoptLinkedMap at
finish. Parallel stream call sites (TexturePackLoader.scanTextures,
ModelResolver.loadBlockModels / loadItemModels / scanJsonFiles, and
ItemDefinitionLoader.load) drop their forEach-into-ConcurrentMap pattern in
favour of .collect(Concurrent.toX), which now accumulates per-shard JDK maps
and adopts the merged result; BlockStateLoader collects parsed records into
a list then partitions sequentially so its two output maps stay lock-free.

PipelineRendererContext absorbs the largest share of the win: the primary
block index, block-state-only fallbacks, item index, entity index, texture
index, colour-map index, and reverse-tag index all build into HashMaps and
adopt at the end of their respective build methods. Per-block textures maps
likewise build into a HashMap and adopt at construction; flattenElementFaces
widens to Map<String,String> so it works on either side. EntityModelLoader's
bones/cubes hot paths (load, inflateModel, applyPerCubeOverrides, the per-
entity bone-override clone) follow the same shape, and the four apply* bone
helpers widen their parameter to Map for the same reason.

Bumps the collections SHA in build.gradle.kts to 464b51db21 to pull in the
adopt factories and the lock-free Concurrent.toX collectors that all of the
above relies on.